k8deployment/ingress/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/auth-url: http://useraccount.default.svc.cluster.local:8080/api/user/user
    # nginx.ingress.kubernetes.io/auth-response-headers: userId # todo response headers need to be set by user api
    # enable cors
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    # sticky session to enable chatroom scaling
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "balanced"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    # allow websockets
    nginx.org/websocket-services: "auctionroommanager"
spec:
  rules:
    - http:
        paths:
          - path: /api/auctiondetails
            pathType: Prefix
            backend:
              service:
                name: auctiondetails
                port:
                  number: 8081
          - path: /api/currency
            pathType: Prefix
            backend:
              service:
                name: currencymanagement
                port:
                  number: 8082
          - path: /api/room
            pathType: Prefix
            backend:
                service:
                  name: auctionroom
                  port:
                    number: 8083
          - path: /api/test-agg
            pathType: Prefix
            backend:
                service:
                  name: aggregatesvr
                  port:
                    number: 8085
          - path: /auctionroom
            pathType: Prefix
            backend:
                service:
                  name: auctionroommanager
                  port:
                    number: 9000
          - path: /socket.io
            pathType: Prefix
            backend:
                service:
                  name: auctionroommanager
                  port:
                    number: 9000
